--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ semver = "1.0.20"
 thiserror = "1.0.51"
 tokio-util = { version = "0.7.10", features = ["compat"] }
 tracing = "0.1.40"
+
+[dev-dependencies]
+tokio = { version = "1.35.1", features = ["rt", "macros"] }
