--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.79"
 base64 = "0.21.5"
 bytes = "1.5.0"
 dirs = "5.0.1"
+docker_credential = "1.2.1"
 futures-util = { version = "0.3.29", features = ["io"] }
 oci-distribution = "0.10.0"
 reqwest = "0.11.23"
