--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+async-trait = "0.1.77"
 base64 = "0.21.5"
 bytes = "1.5.0"
 dirs = "5.0.1"
@@ -18,7 +19,6 @@ serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.110"
 thiserror = "1.0.51"
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
-tokio-util = { version = "0.7.10", features = ["compat"] }
 toml = "0.8.8"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
