--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 semver = "1.0.20"
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.110"
+sha2 = "0.10.8"
 thiserror = "1.0.51"
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
+tokio-util = { version = "0.7.10", features = ["io"] }
 toml = "0.8.8"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
