--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,13 @@ repository = "https://github.com/lann/warg-loader"
 [dependencies]
 anyhow = "1.0.79"
 async-trait = "0.1.77"
-base64 = "0.21.5"
+base64 = "0.22.0"
 bytes = "1.5.0"
 dirs = "5.0.1"
 docker_credential = "1.2.1"
 futures-util = { version = "0.3.29", features = ["io"] }
 oci-distribution = "0.10.0"
-reqwest = "0.11.23"
+reqwest = { version = "0.12.0", features = ["json"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 semver = "1.0.20"
 serde = { version = "1.0.194", features = ["derive"] }
@@ -28,3 +28,5 @@ tokio-util = { version = "0.7.10", features = ["io"] }
 toml = "0.8.8"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+warg-client = "0.4.1"
+warg-protocol = "0.4.1"
